--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 // IMPORTS
 //
 
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 @import "reset";
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
